--- a/Ui/cadastro.ui
+++ b/Ui/cadastro.ui
@@ -6,67 +6,76 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>392</width>
-    <height>427</height>
+    <width>398</width>
+    <height>405</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(20, 26, 41);</string>
+  </property>
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>140</y>
-     <width>113</width>
-     <height>20</height>
+     <x>100</x>
+     <y>180</y>
+     <width>191</width>
+     <height>35</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:5px;
+border-color: Black;
+padding:10px;
+border-width:1px;</string>
+   </property>
+   <property name="placeholderText">
+    <string>E-mail</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_2">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>170</y>
-     <width>113</width>
-     <height>20</height>
+     <x>100</x>
+     <y>220</y>
+     <width>191</width>
+     <height>35</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>140</y>
-     <width>47</width>
-     <height>13</height>
-    </rect>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:5px;
+border-color: Black;
+padding:10px;
+border-width:1px;</string>
    </property>
-   <property name="text">
-    <string>E-mail</string>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
    </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>170</y>
-     <width>47</width>
-     <height>13</height>
-    </rect>
-   </property>
-   <property name="text">
+   <property name="placeholderText">
     <string>Password</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>260</y>
-     <width>181</width>
+     <x>100</x>
+     <y>320</y>
+     <width>191</width>
      <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:20px;
+border-color: white;
+border-width:1px;</string>
    </property>
    <property name="text">
     <string>Cadastrar</string>
@@ -75,54 +84,58 @@
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>50</x>
-     <y>10</y>
-     <width>321</width>
-     <height>71</height>
+     <x>140</x>
+     <y>90</y>
+     <width>131</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>19</pointsize>
+     <pointsize>22</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
    </property>
-   <property name="text">
-    <string>CADASTRO DE USUARIO</string>
-   </property>
-  </widget>
-  <widget class="QLabel" name="label_4">
-   <property name="geometry">
-    <rect>
-     <x>110</x>
-     <y>110</y>
-     <width>47</width>
-     <height>13</height>
-    </rect>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>Nome</string>
+    <string>Register</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_3">
    <property name="geometry">
     <rect>
-     <x>180</x>
-     <y>110</y>
-     <width>113</width>
-     <height>20</height>
+     <x>100</x>
+     <y>140</y>
+     <width>191</width>
+     <height>35</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:5px;
+border-color: Black;
+padding:10px;
+border-width:1px;</string>
+   </property>
+   <property name="placeholderText">
+    <string>Name</string>
    </property>
   </widget>
   <widget class="QRadioButton" name="radioButton">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>230</y>
+     <x>100</x>
+     <y>290</y>
      <width>82</width>
      <height>17</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>Masculino </string>
@@ -131,11 +144,14 @@
   <widget class="QRadioButton" name="radioButton_2">
    <property name="geometry">
     <rect>
-     <x>210</x>
-     <y>230</y>
+     <x>180</x>
+     <y>290</y>
      <width>82</width>
      <height>17</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>Feminino</string>
@@ -144,11 +160,21 @@
   <widget class="QLabel" name="label_5">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>200</y>
-     <width>111</width>
+     <x>100</x>
+     <y>260</y>
+     <width>141</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>10</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>Qual é o seu Genero?</string>
@@ -157,14 +183,39 @@
   <widget class="QLabel" name="label_6">
    <property name="geometry">
     <rect>
-     <x>110</x>
-     <y>340</y>
+     <x>100</x>
+     <y>370</y>
      <width>181</width>
      <height>21</height>
     </rect>
    </property>
    <property name="text">
     <string/>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>20</y>
+     <width>71</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../../personal.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+   <property name="wordWrap">
+    <bool>false</bool>
+   </property>
+   <property name="openExternalLinks">
+    <bool>false</bool>
    </property>
   </widget>
  </widget>
