--- a/Ui/login.ui
+++ b/Ui/login.ui
@@ -6,87 +6,117 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>395</width>
-    <height>331</height>
+    <width>398</width>
+    <height>405</height>
    </rect>
+  </property>
+  <property name="font">
+   <font>
+    <weight>75</weight>
+    <bold>true</bold>
+   </font>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(20, 26, 41);</string>
+  </property>
   <widget class="QLineEdit" name="lineEdit">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>100</y>
-     <width>113</width>
-     <height>20</height>
+     <x>110</x>
+     <y>160</y>
+     <width>191</width>
+     <height>35</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:5px;
+border-color: Black;
+padding:10px;
+border-width:1px;</string>
+   </property>
+   <property name="placeholderText">
+    <string>E-mail</string>
    </property>
   </widget>
   <widget class="QLineEdit" name="lineEdit_2">
    <property name="geometry">
     <rect>
-     <x>170</x>
-     <y>130</y>
-     <width>113</width>
-     <height>20</height>
+     <x>110</x>
+     <y>200</y>
+     <width>191</width>
+     <height>35</height>
     </rect>
    </property>
-  </widget>
-  <widget class="QLabel" name="label">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
-     <y>100</y>
-     <width>47</width>
-     <height>13</height>
-    </rect>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:5px;
+border-color: Black;
+padding:10px;
+border-width:1px;</string>
    </property>
-   <property name="text">
-    <string>E-mail</string>
+   <property name="echoMode">
+    <enum>QLineEdit::Password</enum>
    </property>
-  </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>120</x>
-     <y>130</y>
-     <width>47</width>
-     <height>13</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string>Senha</string>
+   <property name="placeholderText">
+    <string>Password</string>
    </property>
   </widget>
   <widget class="QPushButton" name="pushButton">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>170</y>
-     <width>161</width>
+     <x>110</x>
+     <y>260</y>
+     <width>191</width>
      <height>41</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:20px;
+border-color: white;
+border-width:1px;</string>
+   </property>
    <property name="text">
     <string>Log in </string>
+   </property>
+   <property name="autoDefault">
+    <bool>false</bool>
+   </property>
+   <property name="flat">
+    <bool>false</bool>
    </property>
   </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>140</x>
-     <y>20</y>
-     <width>121</width>
-     <height>51</height>
+     <x>160</x>
+     <y>100</y>
+     <width>91</width>
+     <height>41</height>
     </rect>
    </property>
    <property name="font">
     <font>
-     <pointsize>29</pointsize>
+     <pointsize>22</pointsize>
      <weight>75</weight>
      <bold>true</bold>
     </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
     <string>Login</string>
@@ -95,11 +125,21 @@
   <widget class="QLabel" name="label_4">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>280</y>
-     <width>151</width>
+     <x>90</x>
+     <y>360</y>
+     <width>241</width>
      <height>21</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>12</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 0, 0);</string>
    </property>
    <property name="text">
     <string/>
@@ -108,14 +148,46 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>120</x>
-     <y>220</y>
-     <width>161</width>
+     <x>110</x>
+     <y>310</y>
+     <width>191</width>
      <height>41</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:20px;
+border-color: white;
+border-width:1px;</string>
+   </property>
    <property name="text">
     <string>Register</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_5">
+   <property name="geometry">
+    <rect>
+     <x>170</x>
+     <y>20</y>
+     <width>71</width>
+     <height>71</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../../img-user.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
    </property>
   </widget>
  </widget>
