--- a/Ui/dashboard.ui
+++ b/Ui/dashboard.ui
@@ -6,18 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>753</width>
-    <height>479</height>
+    <width>882</width>
+    <height>430</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Form</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: rgb(20, 26, 41);</string>
+  </property>
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>260</x>
-     <y>20</y>
+     <x>110</x>
+     <y>30</y>
      <width>291</width>
      <height>41</height>
     </rect>
@@ -29,6 +32,9 @@
      <bold>true</bold>
     </font>
    </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);</string>
+   </property>
    <property name="text">
     <string>DASHBOARD ADMIN</string>
    </property>
@@ -36,11 +42,25 @@
   <widget class="QPushButton" name="cad_btn">
    <property name="geometry">
     <rect>
-     <x>20</x>
+     <x>40</x>
      <y>100</y>
      <width>161</width>
-     <height>61</height>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:10px;
+border-color:#FFFFFF;
+border-width:1px;</string>
    </property>
    <property name="text">
     <string>CADASTRAR</string>
@@ -49,11 +69,18 @@
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>680</x>
-     <y>420</y>
-     <width>61</width>
-     <height>51</height>
+     <x>550</x>
+     <y>30</y>
+     <width>101</width>
+     <height>41</height>
     </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:10px;
+border-color:#FFFFFF;
+border-width:1px;</string>
    </property>
    <property name="text">
     <string>SAIR</string>
@@ -62,11 +89,25 @@
   <widget class="QPushButton" name="upt_btn">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>170</y>
+     <x>40</x>
+     <y>160</y>
      <width>161</width>
-     <height>61</height>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:10px;
+border-color:#FFFFFF;
+border-width:1px;</string>
    </property>
    <property name="text">
     <string>ATUALIZAR</string>
@@ -75,11 +116,25 @@
   <widget class="QPushButton" name="dell_btn">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>240</y>
+     <x>40</x>
+     <y>220</y>
      <width>161</width>
-     <height>61</height>
+     <height>51</height>
     </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>11</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:10px;
+border-color:#FFFFFF;
+border-width:1px;</string>
    </property>
    <property name="text">
     <string>DELETAR</string>
@@ -88,32 +143,96 @@
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
-     <x>200</x>
+     <x>210</x>
      <y>100</y>
-     <width>461</width>
+     <width>631</width>
      <height>291</height>
     </rect>
    </property>
+   <property name="font">
+    <font>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);</string>
+   </property>
    <column>
     <property name="text">
-     <string>tb_user_id</string>
+     <string>ID</string>
     </property>
    </column>
    <column>
     <property name="text">
-     <string>tb_user_nome</string>
+     <string>NOME</string>
+    </property>
+    <property name="background">
+     <color>
+      <red>255</red>
+      <green>255</green>
+      <blue>255</blue>
+     </color>
     </property>
    </column>
    <column>
     <property name="text">
-     <string>tb_user_email</string>
+     <string>E-MAIL</string>
     </property>
    </column>
    <column>
     <property name="text">
-     <string>tb_user_pass</string>
+     <string>PASSWORD</string>
     </property>
    </column>
+   <column>
+    <property name="text">
+     <string>SEXO</string>
+    </property>
+   </column>
+   <column>
+    <property name="text">
+     <string>PERMISSION</string>
+    </property>
+   </column>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>40</x>
+     <y>20</y>
+     <width>50</width>
+     <height>50</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../../salvar-icone.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_3">
+   <property name="geometry">
+    <rect>
+     <x>560</x>
+     <y>40</y>
+     <width>20</width>
+     <height>20</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../../sair.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>true</bool>
+   </property>
   </widget>
  </widget>
  <resources/>
