--- a/Ui/dashboard.ui
+++ b/Ui/dashboard.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>882</width>
-    <height>430</height>
+    <width>899</width>
+    <height>535</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,9 +19,9 @@
   <widget class="QLabel" name="label">
    <property name="geometry">
     <rect>
-     <x>110</x>
+     <x>50</x>
      <y>30</y>
-     <width>291</width>
+     <width>541</width>
      <height>41</height>
     </rect>
    </property>
@@ -36,14 +36,14 @@
     <string notr="true">color: rgb(255, 255, 255);</string>
    </property>
    <property name="text">
-    <string>DASHBOARD ADMIN</string>
+    <string/>
    </property>
   </widget>
   <widget class="QPushButton" name="cad_btn">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>100</y>
+     <x>260</x>
+     <y>400</y>
      <width>161</width>
      <height>51</height>
     </rect>
@@ -69,7 +69,7 @@ border-width:1px;</string>
   <widget class="QPushButton" name="pushButton_2">
    <property name="geometry">
     <rect>
-     <x>550</x>
+     <x>760</x>
      <y>30</y>
      <width>101</width>
      <height>41</height>
@@ -89,8 +89,8 @@ border-width:1px;</string>
   <widget class="QPushButton" name="upt_btn">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>160</y>
+     <x>430</x>
+     <y>400</y>
      <width>161</width>
      <height>51</height>
     </rect>
@@ -116,8 +116,8 @@ border-width:1px;</string>
   <widget class="QPushButton" name="dell_btn">
    <property name="geometry">
     <rect>
-     <x>40</x>
-     <y>220</y>
+     <x>600</x>
+     <y>400</y>
      <width>161</width>
      <height>51</height>
     </rect>
@@ -143,7 +143,7 @@ border-width:1px;</string>
   <widget class="QTableWidget" name="tableWidget">
    <property name="geometry">
     <rect>
-     <x>210</x>
+     <x>260</x>
      <y>100</y>
      <width>631</width>
      <height>291</height>
@@ -196,29 +196,10 @@ border-width:1px;</string>
     </property>
    </column>
   </widget>
-  <widget class="QLabel" name="label_2">
-   <property name="geometry">
-    <rect>
-     <x>40</x>
-     <y>20</y>
-     <width>50</width>
-     <height>50</height>
-    </rect>
-   </property>
-   <property name="text">
-    <string/>
-   </property>
-   <property name="pixmap">
-    <pixmap>../../../salvar-icone.png</pixmap>
-   </property>
-   <property name="scaledContents">
-    <bool>true</bool>
-   </property>
-  </widget>
   <widget class="QLabel" name="label_3">
    <property name="geometry">
     <rect>
-     <x>560</x>
+     <x>770</x>
      <y>40</y>
      <width>20</width>
      <height>20</height>
@@ -232,6 +213,116 @@ border-width:1px;</string>
    </property>
    <property name="scaledContents">
     <bool>true</bool>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="id">
+   <property name="enabled">
+    <bool>false</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>110</y>
+     <width>81</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:5px;
+border-color: Black;
+padding:10px;
+border-width:1px;</string>
+   </property>
+   <property name="placeholderText">
+    <string>ID</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="nome">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>160</y>
+     <width>201</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:5px;
+border-color: Black;
+padding:10px;
+border-width:1px;</string>
+   </property>
+   <property name="placeholderText">
+    <string>Nome</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="email">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>210</y>
+     <width>201</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:5px;
+border-color: Black;
+padding:10px;
+border-width:1px;</string>
+   </property>
+   <property name="placeholderText">
+    <string>E-mail </string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="senha">
+   <property name="geometry">
+    <rect>
+     <x>50</x>
+     <y>260</y>
+     <width>201</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">background-color: rgb(255, 255, 255);
+border-style:outset;
+border-radius:5px;
+border-color: Black;
+padding:10px;
+border-width:1px;</string>
+   </property>
+   <property name="placeholderText">
+    <string>Password</string>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="geometry">
+    <rect>
+     <x>30</x>
+     <y>470</y>
+     <width>451</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>16</pointsize>
+     <weight>75</weight>
+     <bold>true</bold>
+    </font>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">color: rgb(0, 255, 127);</string>
+   </property>
+   <property name="text">
+    <string/>
    </property>
   </widget>
  </widget>
